--- a/packages/react-storybook/package.json
+++ b/packages/react-storybook/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-storybook",
+  "name": "@my-playground/react-storybook",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
